<resources>
    <string name="app_name">Basketball scoreboard</string>
    <string name="action_settings">Ajustes</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="bt1">1</string>
    <string name="bt2">2</string>
    <string name="bt3">3</string>
    <string name="btMore">+</string>
    <string name="btLess">-</string>
    <string name="tvCount">0</string>
    <string name="btReset">REINICIAR</string>
    <string name="tvEquipo1">LOCAL</string>
    <string name="tvEquipo2">VISITANTE</string>
    <string name="tvEliga">Eliga el nombre de los equipos:</string>
    <string name="estblecerEquipos">Establecer</string>
    <string name="nombreEquipoLocal">Equipo local</string>
    <string name="nombreEquipoVisitante">Equipo visitante</string>
</resources>
