<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:screenOrientation="landscape"
    android:padding="5dp"
    android:baselineAligned="false"
    android:weightSum="5"
    android:background="@drawable/oscurisima">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/linearLayout"
        android:layout_weight="1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bt1"
            android:id="@+id/bt1Left"
            android:nestedScrollingEnabled="false"
            android:onClick="sumar"
            android:background="@drawable/mi_boton"
            android:textColor="#FFFFFF"
            android:singleLine="false"
            android:textSize="24sp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bt2"
            android:id="@+id/bt2Left"
            android:onClick="sumar"
            android:background="@drawable/mi_boton"
            android:textColor="#FFFFFF"
            android:singleLine="false"
            android:textSize="24sp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bt3"
            android:id="@+id/bt3Left"
            android:onClick="sumar"
            android:background="@drawable/mi_boton"
            android:textColor="#FFFFFF"
            android:singleLine="false"
            android:textSize="24sp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btLess"
            android:id="@+id/btLessLeft"
            android:onClick="sumar"
            android:background="@drawable/mi_boton"
            android:textColor="#FFFFFF"
            android:singleLine="false"
            android:textSize="24sp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_gravity="right"
            android:layout_marginBottom="20dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:layout_weight="3"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_weight="3"
            android:layout_gravity="center_vertical"
            android:gravity="center">


            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tvEquipo1"
                    android:id="@+id/tvEquipo1"
                    android:textColor="#FFFFFF"
                    android:textSize="10pt"
                    android:layout_alignParentTop="true"
                    android:layout_alignEnd="@+id/tvLeft"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tvCount"
                    android:id="@+id/tvLeft"
                    android:textAlignment="center"
                    android:textSize="62sp"
                    android:width="100dp"
                    android:textColor="#FFFFFF"
                    android:layout_alignTop="@+id/tvRight"
                    android:layout_alignParentStart="true" />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tvEquipo2"
                    android:id="@+id/tvEquipo2"
                    android:textColor="#FFFFFF"
                    android:textSize="10pt"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/tvCount"
                    android:id="@+id/tvRight"
                    android:textAlignment="center"
                    android:textSize="62sp"
                    android:width="100dp"
                    android:textColor="#FFFFFF"
                    android:layout_below="@+id/tvEquipo2"
                    android:layout_alignStart="@+id/tvEquipo2" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_weight="7"
            android:paddingTop="40dp"
            android:paddingBottom="30dp"
            android:paddingRight="50dp"
            android:paddingLeft="60dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/btReset"
                android:id="@+id/btReset"
                android:background="@drawable/mi_boton"
                android:textColor="#FFFFFF"
                android:singleLine="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:layout_gravity="center_horizontal"
                android:onClick="resetear" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bt1"
            android:id="@+id/bt1Right"
            android:onClick="sumar"
            android:background="@drawable/mi_boton"
            android:textColor="#FFFFFF"
            android:singleLine="false"
            android:textSize="24sp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bt2"
            android:id="@+id/bt2Right"
            android:onClick="sumar"
            android:background="@drawable/mi_boton"
            android:textColor="#FFFFFF"
            android:singleLine="false"
            android:textSize="24sp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/bt3"
            android:id="@+id/bt3Right"
            android:onClick="sumar"
            android:background="@drawable/mi_boton"
            android:textColor="#FFFFFF"
            android:singleLine="false"
            android:textSize="24sp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btLess"
            android:id="@+id/btLessRight"
            android:onClick="sumar"
            android:background="@drawable/mi_boton"
            android:textColor="#FFFFFF"
            android:singleLine="false"
            android:textSize="24sp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />
    </LinearLayout>

</LinearLayout>
